# Poetry-Crashkurs

./: README.md  pyproject.toml
src/myproject/: main.py
