[tool.poetry]
name = "myproject"
version = "0.1.0"
description = ""
authors = ["markus <datamastery87@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^1.4.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "*"

[tool.poetry.scripts]
cmd = "myproject.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
